--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,22 @@
   "manifest_version": 2,
 
   "name": "focus",
-  "description": "AI extension that make sure's you are keeping focus",
+  "description": "Extension that makes sure you are keeping focus",
   "version": "1.0",
 
   "browser_action": {
     "default_popup": "main.html"
   },
+  "background": {
+    "scripts" : ["background.js"]
+  },
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["pageScript.js"]
+    }
+  ],
   "permissions": [
+    "storage"
   ]
 }
