--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
   "manifest_version": 2,
 
-  "name": "focus",
-  "description": "Extension that makes sure you are keeping focus",
+  "name": "alfred",
+  "description": "Learning assitant that helps you focus",
   "version": "1.0",
 
   "browser_action": {
     "default_popup": "app/main.html"
   },
   "background": {
-    "scripts" : ["app/background.js", "/processor/nlp.js", "libs/compromise.min.js", "libs/synaptic.js"]
+    "scripts" : ["app/background.js", "processor/nlp.js", "libs/compromise.min.js", "libs/synaptic.js"]
   },
   "content_scripts": [
     {
@@ -18,6 +18,7 @@
     }
   ],
   "permissions": [
-    "storage"
+    "storage",
+    "http://www.mediawiki.com/* "
   ]
 }
